very basic banner image select/save
