# libs/go/models/recipe.go
@@ -2,7 +2,7 @@ package models
 
 import "time"
 
-type RecipeMetada struct {
+type RecipeMetadata struct {
 	Stars int32 `firestore:"stars" json:"stars"`
 	Forks int32 `firestore:"forks" json:"forks"`
 }
@@ -12,7 +12,7 @@ type Recipe struct {
 	Author          UserSummary    `firestore:"author" json:"author"`
 	Contributors    []UserSummary  `firestore:"contributors" json:"contributors"`
 	CurrentRevision RecipeRevision `firestore:"currentRevision" json:"currentRevision"`
-	Metadata        RecipeMetada   `firestore:"metadata" json:"metadata"`
+	Metadata        RecipeMetadata `firestore:"metadata" json:"metadata"`
 	Root            string         `firestore:"root" json:"root"`
 	Branch          string         `firestore:"branch" json:"branch"`
 	CreatedDate     time.Time      `firestore:"createdDate" json:"createdDate"`
