# libs/ts/api-fetch/src/models/models_RecipeRevision.ts
@@ -2,16 +2,16 @@
 /* tslint:disable */
 /* eslint-disable */
 
-import type { models_Image } from './models_Image';
 import type { models_Ingredient } from './models_Ingredient';
 import type { models_Instruction } from './models_Instruction';
+import type { models_RecipeMediaVariant } from './models_RecipeMediaVariant';
 import type { models_UserSummary } from './models_UserSummary';
 
 export type models_RecipeRevision = {
     author?: models_UserSummary;
+    banner?: Array<models_RecipeMediaVariant>;
     createdDate?: string;
     id?: string;
-    images?: Array<models_Image>;
     ingredients?: Array<models_Ingredient>;
     instructions?: Array<models_Instruction>;
     name?: string;
